<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.lab_5_android.ui.home.HomeFragment"
        android:label="@string/title"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_nav_home_to_registerFragment"
            app:destination="@id/registerFragment" />
        <action
            android:id="@+id/action_nav_home_to_guestFragment"
            app:destination="@id/guestFragment" />
        <action
            android:id="@+id/action_nav_home_to_aboutFragment"
            app:destination="@id/aboutFragment" />
    </fragment>

    <fragment
        android:id="@+id/guestFragment"
        android:name="com.example.lab_5_android.ui.guest.GuestFragment"
        android:label="@string/menu_guest"
        tools:layout="@layout/fragment_guest" >
        <action
            android:id="@+id/action_guestFragment_to_addFragment"
            app:destination="@id/addFragment" />
    </fragment>

    <fragment
        android:id="@+id/aboutFragment"
        android:name="com.example.lab_5_android.ui.about.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" />

    <fragment
        android:id="@+id/registerFragment"
        android:name="com.example.lab_5_android.ui.register.RegisterFragment"
        android:label="@string/text_registrando"
        tools:layout="@layout/fragment_register">
        <action
            android:id="@+id/register_to_result"
            app:destination="@id/resultFragment"
            app:launchSingleTop="true"
            app:popUpTo="@id/nav_home" />
    </fragment>

    <fragment
        android:id="@+id/resultFragment"
        android:name="com.example.lab_5_android.ui.result.ResultFragment"
        android:label="@string/text_resultado"
        tools:layout="@layout/fragment_result" >
        <action
            android:id="@+id/result_to_register"
            app:destination="@id/registerFragment"
            app:popUpTo="@id/nav_home"/>
        <argument
            android:name="guestTotal"
            android:defaultValue="0"
            app:argType="integer"/>
        <argument
            android:name="registered"
            app:argType="integer"
            android:defaultValue="0" />
    </fragment>
    <fragment
        android:id="@+id/addFragment"
        android:name="com.example.lab_5_android.ui.add.AddFragment"
        android:label="@string/text_agregar_invitado"
        tools:layout="@layout/fragment_add">
        <action
            android:id="@+id/add_to_guests"
            app:destination="@+id/guestFragment" />
        <argument
            android:name="Guest"
            android:defaultValue="true"
            app:argType="boolean" />
    </fragment>
    <fragment
        android:id="@+id/rolesFragment"
        android:name="com.example.lab_5_android.ui.roles.RolesFragment"
        android:label="Roles" >
        <action
            android:id="@+id/roles_to_addRoles"
            app:destination="@id/addRolesFragment" />
    </fragment>
    <fragment
        android:id="@+id/addRolesFragment"
        android:name="com.example.lab_5_android.ui.roles.AddRolesFragment"
        android:label="@string/text_agregar_rol">
        <action
            android:id="@+id/addRoles_to_roles"
            app:destination="@id/rolesFragment" />
    </fragment>


</navigation>